// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Input] Rendering & State Changes should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#F1F1F1",
        "borderColor": "#F1F1F1",
        "borderRadius": 12,
        "borderWidth": 2,
        "flexDirection": "row",
        "overflow": "hidden",
        "paddingHorizontal": 0,
      },
    ]
  }
  testID="input"
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 24,
        },
        Array [
          Object {
            "color": "#A8A8A8",
            "flexGrow": 0,
            "height": 24,
            "justifyContent": "center",
            "marginHorizontal": 12,
            "width": 24,
          },
        ],
        Object {
          "fontFamily": "icomoon",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <TextInput
    autoCapitalize="none"
    fontFamily="NunitoSans-Regular"
    fontSize={16}
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    placeholder="label"
    placeholderTextColor="#A8A8A8"
    secureTextEntry={false}
    style={
      Array [
        Object {},
      ]
    }
    value="stub value"
  />
</View>
`;

exports[`[Input] Rendering & State Changes should render correctly without an icon 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#F1F1F1",
        "borderColor": "#F1F1F1",
        "borderRadius": 12,
        "borderWidth": 2,
        "flexDirection": "row",
        "overflow": "hidden",
        "paddingHorizontal": 12,
      },
    ]
  }
  testID="input"
>
  <TextInput
    autoCapitalize="none"
    fontFamily="NunitoSans-Regular"
    fontSize={16}
    onBlur={[Function]}
    onChangeText={[MockFunction]}
    onFocus={[Function]}
    placeholder="label"
    placeholderTextColor="#A8A8A8"
    secureTextEntry={false}
    style={
      Array [
        Object {},
      ]
    }
    value="stub value"
  />
</View>
`;
